# email-sender

./: .gitignore  Cargo.toml  Dockerfile
.sqlx/: query-58cefece11c83598a5219927b1bd5dd1af912e59264fc540f870965d27c3db69.json  query-d49a45f20cfa37a8b441e6460c82511f3711b4046c20fff37e7b11aed4c4f6f4.json  query-fa8c15dcab3665adb1c46a8d5b39eb7dbb6d9fefb7e0d5b74bd256e3b27687a5.json
config/: base.yaml
migrations/: 20250610141200_create_subscriptions_table.sql  20250712115103_add_status_to_subscriptions.sql  20250712134230_make_status_not_null_in_subscriptions.sql  20250712134247_create_subscription_tokens_table.sql
scripts/: 0.1.install_sqlx-cli.sh  0.2.init_db.sh  0.3.load-migration.sh
src/: configuration.rs  email_client.rs  errors.rs  lib.rs  main.rs  telemetry.rs  validation.rs
src/handlers/: confirm_subscription.rs  health_check.rs  mod.rs  subscription.rs
src/middleware-examples/: mod.rs
tests/: confirm_subscription.rs  health_check.rs  subscriptions.rs  utils.rs
