[package]
name = "email_sender"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_sender" # cargo run --bin email_senderのように起動するバイナリを指定できるようになる。

[dependencies]
axum = { version = "0.8.4", features = ["tokio", "macros"]}
tokio = { version = "1.45.1", features = ["full"]}
garde = { version = "0.22.0", features = ["full"]}
thiserror = "2.0.12"
serde-aux = "4.7.0"
serde = { version = "1.0.219", features = ["derive"]}
mime = "0.3.17"
config = { version = "0.14.1"}
uuid = { version = "1.17.0", features = ["v4"]}
tower-http = { version = "0.6.6", features = ["trace", "util"] }
tracing = { version = "0.1.41", features = ["attributes"]}
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter", "registry"] }
reqwest = { version = "0.12.19"  , features = ["rustls-tls", "json"]}
serde_json = "1.0.140"
regex = "1.11.1"
tower = {version = "0.5.2", features = ["util"]}
anyhow = "1.0.98"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
mockito = {version="1.7.0"}
tokio = { version = "1", features = ["full"] }
fake = "4.3.0"
quickcheck = "1.0.3"

